--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,11 @@ license = "MIT OR Apache-2.0"
 repository = "https://github.com/axodotdev/axolotlsay"
 
 [dependencies]
+axoasset = "0.0.1"
+axohtml = "0.4.1"
 clap = { version = "4.1.4", features = ["derive"] }
+markdown = "1.0.0-alpha.7"
+thiserror = "1.0.39"
 unicode-width = "0.1.10"
 
 [dev-dependencies]
