--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ repository = "https://github.com/axodotdev/axolotlsay"
 axoasset = "0.0.1"
 axohtml = "0.4.1"
 clap = { version = "4.1.4", features = ["derive"] }
+console = "0.15.5"
 markdown = "1.0.0-alpha.7"
 thiserror = "1.0.39"
 unicode-width = "0.1.10"
