--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ axohtml = "0.4.1"
 clap = { version = "4.1.4", features = ["derive"] }
 console = "0.15.5"
 css-minify = "0.3.1"
+fs_extra = "1.3.0"
 markdown = "1.0.0-alpha.7"
 thiserror = "1.0.39"
 
